--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="about"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Web Applications Development</title>
+    <title>Data Analysis</title>
 
     <link rel="stylesheet" href="./assets/fonts.css">
     <link rel="stylesheet" href="./assets/course.css">
@@ -24,7 +24,7 @@
   </head>
   <body style="padding-top: 400px;">
     <header class="active">
-      <h1>Web Applications Development</h1>
+      <h1>Data Analysis</h1>
       <h2>2019-I</h2>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -46,9 +46,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#resources">Resources</a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link" href="#schedule">Schedule</a>
-          </li>
+        </li-->
         </ul>
       </div>
     </nav>
@@ -58,13 +58,13 @@
         <h3 id="overview">Overview</h3>
         <p>
           <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i> <b>Name</b>: Web Applications Development</li>
+            <li><i class="fa-li fa fa-check-square"></i> <b>Name</b>: Data Analysis</li>
             <li><i class="fa-li fa fa-check-square"></i> <b>Area</b>: Professional</li>
             <li><i class="fa-li fa fa-check-square"></i> <b>Type</b>: Theoretical - Practical</li>
-            <li><i class="fa-li fa fa-check-square"></i> <b>Character</b>: Obligatory</li>
-            <li><i class="fa-li fa fa-check-square"></i> <b>Academic Credits</b>: 3</li>
-            <li><i class="fa-li fa fa-check-square"></i> <b>Date of Review</b>: June 19, 2018</li>
-            <li><i class="fa-li fa fa-check-square"></i> <b>University Format Course Plan</b>: <a target="_blank" href="https://goo.gl/Dz4hrw">Document</a></li>
+            <li><i class="fa-li fa fa-check-square"></i> <b>Character</b>: Optional</li>
+            <!--li><i class="fa-li fa fa-check-square"></i> <b>Academic Credits</b>: 3</li-->
+            <li><i class="fa-li fa fa-check-square"></i> <b>Date of Review</b>: Feb 14, 2024</li>
+            <!--li><i class="fa-li fa fa-check-square"></i> <b>University Format Course Plan</b>: <a target="_blank" href="https://goo.gl/Dz4hrw">Document</a></li-->
           </ul>
         </p>
         <h3 id="instructor">Instructor</h3>
@@ -73,94 +73,81 @@
           <br> <em>Universidad Piloto de Colombia</em>
         </p>
         <h3 id="course-goal">Course goal</h3>
-        <p>The purpose of this course is involve the students in all the life cycle of web applications development and give some analytics tools to the students, in order their has own criteria to take decisions on a software project in the real world with real needs and faced the client requirements with innovation, creativity and knowledge.
-          This web applications will be satisface the particularly needs of clients and that needs will defined the quality attributes and functional requirements.
+        <p>This training program is designed to guide you through the fundamental aspects of data analysis. You'll explore various databases, learn SQL, dive into data modeling, and use modern tools like Python for data analysis and visualization.
         </p>
       </div>
     </section>
     <section id="course-content" class="">
       <!-- <img src="./assets/audio.jpg" alt="Animals playing pong"/> -->
       <h1 arb:id="audioTitle">Course Content</h1>
-      <div class="container ">
+      <div class="container">
         <div class="row">
-          <div class="col-sm-5">
-            <p>
-              <ul class="fa-ul">
-                <li><i class="fa-li fa fa-coffee"></i> <strong>1. Needs Analysis</strong></li>
-                  <text>1.1 Google Design Thinking</text>
-                <li><i class="fa-li fa fa-magic"></i> 2. Development Methodologies</li>
-                  <text>2.1 Scrum Methodology<br>
-                  2.2 User Stories<br>
-                  2.3 Test Driven Development<br></text>
-                <li><i class="fa-li fa fa-user-secret"></i> <strong>3. User Experience</strong></li>
-                  <text>3.1 Usabilidad en la Web<br>
-                  3.2 ¿Cómo usamos realmente la Web?<br>
-                  3.3 Diseño de rótulos 101<br>
-                  3.4 Opciones Mecánicas<br>
-                  3.5 Escribir en la Web<br>
-                  3.6 Diseño de Navegación<br>
-                  3.7 Recomendaciones Finales<br>
-                  3.8 Lecturas Recomendadas<br></text>
-                <li><i class="fa-li fa fa-internet-explorer"></i> <strong>4. Internet and Web Concepts</strong></li>
-                  <text>4.1 Web Domain<br>
-                  4.2 HTTP and TCP Protocols<br>
-                      <a href="https://docs.google.com/document/d/1WQomkrYtthso8GFA7DvoJHKS4-6xmfNP92V59eIwB3E/edit?usp=sharing">4.3 HTTPS Certificate and Security Encryption</a><br>
-                  4.4 HTML Hello World<br>
-                  4.5 Styling the Page with CSS<br>
-                  4.6 HTML5<br>
-                  4.7 FTP - SFTP<br></text>
-              </ul>
-            </p>
-          </div>
-          <div class="col-sm-4">
-            <p>
-              <ul class="fa-ul">
-                <li><i class="fa-li fa fa-building"></i> <strong>5. Architecture</strong></li>
-                  <text>5.1 Arquitectura Modular<br>
-                  5.2 Arquitectura Monolítica<br>
-                  5.3 Arquitectura Microservicios<br></text>
-                <li><i class="fa-li fa fa-laptop"></i> <strong>6. FrontEnd - Development</strong></li>
-                    <text>6.1 Angular<br>
-                    6.1.1 What is<br>
-                    6.1.2 Environment<br>
-                    6.1.3 Start App<br>
-                    6.1.4 TypeScript<br>
-                    6.1.5 Fundamentals<br>
-                    6.1.6 Data and Events<br>
-                    6.1.7 ReUse<br>
-                    6.1.8 Directives<br>
-                    6.1.9 Forms and React Forms<br>
-                    6.1.10 Consume HTTP Services<br>
-                    6.1.11 Routing and Navigation<br>
-                    6.1.12 Security<br>
-                    6.1.13 Deployments<br>
-                  6.2 Alternative React<br>
-                    6.2.1 Fast Review<br></text>
-              </ul>
-            </p>
-          </div>
-          <div class="col-sm-3">
-            <p>
-              <ul class="fa-ul">
-                <li><i class="fa-li fa fa-code"></i> <strong>7. BackEnd - Development</strong></li>
-                  <text>7.1 SprintBoot<br>
-                  7.1.1 Core<br>
-                  7.1.2 Test - Development<br>
-                  7.1.3 JUNIT Test TDD<br>
-                  7.1.4 Spring MVC<br>
-                  7.1.5 Security<br>
-                  7.1.6 JPA and DAO Design Pattern<br>
-                  7.1.7 NoSQL Database<br>
-                  7.1.8 REST API<br>
-                  7.1.9 JMS RabbitMQ<br>
-                  7.2.10 Alternative Node JS<br>
-                  7.2.11 Fast Review<br></text>
-                <li><i class="fa-li fa fa-shield"></i> <strong>8. Security</strong></li>
-                  <text>8.1 OWASP<br>
-                  8.2 HTTPS In Trace vs HTTP<br>
-                  8.3 OAuth 2.0<br></text>
-              </ul>
-            </p>
+          <div class="col-sm-12">
+            <ul class="fa-ul">
+              <li><i class="fa-li fa fa-database"></i> <strong>1. Introduction to Data Analysis</strong>
+                <ul>
+                  <li>Basics of data analysis</li>
+                  <li>Importance in the current landscape</li>
+                  <li>Common tools and applications</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-sitemap"></i> <strong>2. Databases and Set Theory</strong>
+                <ul>
+                  <li>Database types and uses</li>
+                  <li>Set theory and databases</li>
+                  <li>Basic set theory operations in databases</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-line-chart"></i> <strong>3. Data Modeling</strong>
+                <ul>
+                  <li>Entity-relationship models</li>
+                  <li>Data normalization</li>
+                  <li>Logical and physical database design</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-code"></i> <strong>4. SQL and Data Manipulation</strong>
+                <ul>
+                  <li>SQL fundamentals: queries, inserts, updates, deletes</li>
+                  <li>Aggregate functions and grouping</li>
+                  <li>Joins and subqueries</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-python"></i> <strong>5. Data Analysis with Python</strong>
+                <ul>
+                  <li>Introduction to Python for data analysis</li>
+                  <li>Python libraries: Pandas, NumPy, Matplotlib</li>
+                  <li>Exploratory data analysis</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-bar-chart"></i> <strong>6. Data Visualization</strong>
+                <ul>
+                  <li>Data visualization principles</li>
+                  <li>Visualization tools: Tableau, Power BI, Python libraries</li>
+                  <li>Interactive dashboards</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-brain"></i> <strong>7. Machine Learning for Data Analysis</strong>
+                <ul>
+                  <li>Introduction to machine learning</li>
+                  <li>Regression and classification models</li>
+                  <li>Model evaluation and hyperparameter tuning</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-cloud"></i> <strong>8. Big Data and Associated Technologies</strong>
+                <ul>
+                  <li>Big Data concepts</li>
+                  <li>Introduction to Hadoop and Spark</li>
+                  <li>Data storage and processing at scale</li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-project-diagram"></i> <strong>9. Practical Projects and Case Studies</strong>
+                <ul>
+                  <li>Real project development</li>
+                  <li>Case study analysis</li>
+                  <li>Best practices and lessons learned</li>
+                </ul>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -189,34 +176,35 @@
             <li><i class="fa-li fa fa-check-square"></i> Project         30%</li>
           </ul>
         </p>
-        <h4><a target="_blank" href="https://docs.google.com/spreadsheets/d/1mwpZfTZB9EngKy_ylYFtGwEJTqIavrDK2ynPlj9DjWc/edit?usp=sharing">Grades</a></h4>
+        <!--h4><a target="_blank" href="https://docs.google.com/spreadsheets/d/1mwpZfTZB9EngKy_ylYFtGwEJTqIavrDK2ynPlj9DjWc/edit?usp=sharing">Grades</a></h4-->
       </div>
     </section>
     <section id="resources" class="">
-      <h1 arb:id="platformTitle">Course Resources</h1>
-      <div class="lead">
-        <h3 id="overview">References</h3>
-        <p>
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i> Pedro J. Jiménez Castela (2017), <a target="_blank" href="https://www.amazon.es/Angular-desde-Cero-convertirte-desarrollador-ebook/dp/B073YC4N6R/ref=sr_1_1?s=digital-text&ie=UTF8&qid=1530446870&sr=1-1">Angular 4 desde Cero: La guía práctica y completa para convertirte en desarrollador Angular Full Stack</a>, Madrid, España, Sapiens IT</li>
-            <li><i class="fa-li fa fa-check-square"></i> Gabriel Canepa (2016), <a target="_blank" href="https://geeksroom.tradepub.com/free/w_syst02/prgm.cgi?a=1">Apache HTTP Server Cookbook</a></li>
-            <li><i class="fa-li fa fa-check-square"></i> Shelley Powers (2015), <a target="_blank" href="https://www.oreilly.com/web-platform/free/getting-started-with-the-web.csp">Getting Started with the Web, Sebastopol</a>, CA, O’Reilly Media</li>
-            <li><i class="fa-li fa fa-check-square"></i> Whittaker, J. A., Arbon, J., & Carollo, J. (2012). <a target="_blank" href="https://books.google.com.co/books?id=vHlTOVTKHeUC">How Google tests software</a>, Addison-Wesley.</li>
-            <li><i class="fa-li fa fa-check-square"></i> Krug, S. (2006). <a target="_blank" href="https://www.amazon.es/hagas-pensar-aproximaci%C3%B3n-usabilidad-Cuadernos/dp/8483222868">No me hagas pensar: una aproximación a la usabilidad en la web</a> (No. Gi2974). PEARSON.</li>
-          </ul>
-        </p>
-        <h3 id="overview">Additional Resources</h3>
-        <p>
-          <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i> Language: Java 8 <a target="_blank" href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">JDK</a>, Java <a target="_blank" href="https://docs.oracle.com/javase/8/docs/">Documentation</a></li>
-            <li><i class="fa-li fa fa-check-square"></i> IDE: <a target="_blank" href="https://www.jetbrains.com/idea/">IntelliJ</a> IDEA <a target="_blank" href="https://www.jetbrains.com/student/">Students</a>, <a target="_blank" href="https://netbeans.apache.org/">Netbeans 9</a>, <a target="_blank" href="https://www.eclipse.org/downloads/packages/eclipse-ide-java-ee-developers/neon3">Eclipse</a>, <a target="_blank" href="https://code.visualstudio.com/download">Visual Studio</a></li>
-            <li><i class="fa-li fa fa-check-square"></i> Tools: <a target="_blank" href="https://www.npmjs.com/">NPM</a>, <a target="_blank" href="https://nodejs.org/en/">Node JS</a></li>
-            <li><i class="fa-li fa fa-check-square"></i> Documentation: Angular <a target="_blank" href="https://angular.io/docs">Documentation</a>, Bootstrap <a target="_blank" href="https://getbootstrap.com/docs/4.0/getting-started/introduction/">Documentation</a></li>
-          </ul>
-        </p>
-      </div>
+        <h1>Course Resources</h1>
+        <div class="lead">
+            <h3>References</h3>
+            <p>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fa fa-check-square"></i> Wes McKinney (2012), <a target="_blank" href="https://www.amazon.com/Python-Data-Analysis-Wrangling-IPython/dp/1449319793">Python for Data Analysis</a>, O'Reilly Media.</li>
+                    <li><i class="fa-li fa fa-check-square"></i> Hadley Wickham & Garrett Grolemund (2016), <a target="_blank" href="https://r4ds.had.co.nz/">R for Data Science</a>, O'Reilly Media.</li>
+                    <li><i class="fa-li fa fa-check-square"></i> Aurélien Géron (2017), <a target="_blank" href="https://www.amazon.com/Hands-Machine-Learning-Scikit-Learn-TensorFlow/dp/1491962291">Hands-On Machine Learning with Scikit-Learn and TensorFlow</a>, O'Reilly Media.</li>
+                    <li><i class="fa-li fa fa-check-square"></i> Jake VanderPlas (2016), <a target="_blank" href="https://www.amazon.com/Python-Data-Science-Handbook-Essential/dp/1491912057">Python Data Science Handbook</a>, O'Reilly Media.</li>
+                    <li><i class="fa-li fa fa-check-square"></i> Max Shron (2014), <a target="_blank" href="https://www.amazon.com/Thinking-Data-Structured-Techniques-Data-Driven-ebook/dp/B00JDMPOSY">Thinking with Data</a>, O'Reilly Media.</li>
+                </ul>
+            </p>
+            <h3>Additional Resources</h3>
+            <p>
+                <ul class="fa-ul">
+                    <li><i class="fa-li fa fa-check-square"></i> Language: Python 3 <a target="_blank" href="https://www.python.org/downloads/">Python Download</a>, Python <a target="_blank" href="https://docs.python.org/3/">Documentation</a></li>
+                    <li><i class="fa-li fa fa-check-square"></i> IDE: <a target="_blank" href="https://jupyter.org/">Jupyter Notebook</a>, <a target="_blank" href="https://www.jetbrains.com/pycharm/">PyCharm</a>, <a target="_blank" href="https://code.visualstudio.com/">Visual Studio Code</a></li>
+                    <li><i class="fa-li fa fa-check-square"></i> Tools: <a target="_blank" href="https://git-scm.com/">Git</a>, <a target="_blank" href="https://github.com/">GitHub</a></li>
+                    <li><i class="fa-li fa fa-check-square"></i> Libraries: Pandas <a target="_blank" href="https://pandas.pydata.org/pandas-docs/stable/">Documentation</a>, NumPy <a target="_blank" href="https://numpy.org/doc/">Documentation</a>, Matplotlib <a target="_blank" href="https://matplotlib.org/">Documentation</a></li>
+                </ul>
+            </p>
+        </div>
     </section>
-    <section id="schedule" class="">
+
+    <!--section id="schedule" class="">
       <h1 arb:id="openTitle">Course Schedule</h1>
       <div class="lead table-responsive">
         <table class="table table-sm text-center">
@@ -343,7 +331,7 @@
           </tbody>
         </table>
       </div>
-    </section>
+  </section-->
     <script src="./assets/course.min.js"></script>
     <script src="./assets/content.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
