--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <li>Common tools and applications</li>
                 </ul>
               </li>
-              <li><i class="fa-li fa fa-sitemap"></i> <strong>2. Databases and Set Theory</strong>
+              <li><i class="fa-li fa fa-sitemap"></i> <strong>2. Databases and Set Theory</strong> <a href="https://www.google.com/search?q=base+de+datos+y+teoria+de+conjuntos&rlz=1C5CHFA_enJP880JP880&oq=bases+de+datos+teoria+de+c&gs_lcrp=EgZjaHJvbWUqCAgBEAAYFhgeMgYIABBFGDkyCAgBEAAYFhge0gEJMTA1ODZqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8#fpstate=ive&vld=cid:6283fdba,vid:_iGvAj3s-ME,st:0">ver más</a>
                 <ul>
                   <li>Database types and uses</li>
                   <li>Set theory and databases</li>
